<resources>
    <string name="app_name">HealthCare Application</string>
    <string name="doctor_registration">Doctor Registration</string>
    <string name="email_hint">Enter email...</string>
    <string name="hint_password">Enter password..</string>
    <string name="enter_name">Enter name..</string>
    <string name="register_button_text">Register</string>
    <string name="login">Login</string>
    <string name="age">Age:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight</string>
    <string name="welcome_title">Health Care App</string>
    <string name="register">Register</string>
    <string name="tablets">Tablets</string>
    <string name="doctor_advices">Doctor Advices</string>
    <string name="update">Update</string>
    <string name="load_patients">Load Patients</string>
    <string name="enter_age">Enter age...</string>
    <string name="specialization">Specialization:</string>
    <string name="enter_specialization">Enter specialization...</string>
    <string name="done">Done</string>
    <string name="enter_height">Enter height...</string>
    <string name="enter_weight">Enter weight..</string>
    <string name="diagnostic">Diagnostic:</string>
    <string name="enter_diagnostic">Enter diagnostic...</string>
    <string name="enter">Enter</string>
    <string name="enter_advice_text">Enter advice text:</string>
    <string name="doctor_s_advice">Doctor\'s advice</string>
    <string name="enter_tablet_for_patient">Enter Tablet for patient</string>
    <string name="name">Name:</string>
    <string name="enter_indications">Enter indications...</string>
    <string name="enter_description">Enter description...</string>
    <string name="credits">Credits</string>
    <string name="parse">Parse</string>
</resources>