<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/faded_green">

    <TextView
        android:id="@+id/patient_diagnostic_update_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/small_padding_dimen"
        android:text="@string/diagnostic"
        android:textSize="@dimen/default_email_dimension"
        />

    <EditText
        android:id="@+id/patient_diagnostic_update_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_diagnostic_update_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_diagnostic"
        android:padding="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        />

    <Button
        android:id="@+id/enter_diagnostic_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_diagnostic_update_edit"
        android:padding="@dimen/small_padding_dimen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enter"
        app:layout_constraintWidth_percent="0.85"
        />

    <TextView
        android:id="@+id/advice_text_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_diagnostic_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enter_advice_text"
        android:padding="@dimen/big_padding"
        android:textSize="@dimen/default_email_dimension"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/advice_text_insert_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/advice_text_insert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/doctor_s_advice"
        android:padding="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        android:maxLines="3"
        />

    <Button
        android:id="@+id/enter_advice_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/advice_text_insert_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        android:text="@string/enter"
        />

    <TextView
        android:id="@+id/tablet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enter_advice_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/medium_padding"
        android:text="@string/enter_tablet_for_patient"
        android:textSize="@dimen/default_email_dimension"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/tablet_name_insert_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tablet_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/enter_name"
        android:layout_marginTop="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        />

    <EditText
        android:id="@+id/tablet_indications_insert_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tablet_name_insert_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_indications"
        android:layout_marginTop="@dimen/small_padding_dimen"
        />

    <EditText
        android:id="@+id/tablet_description_insert_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tablet_indications_insert_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_description"
        android:layout_marginTop="@dimen/small_padding_dimen"
        />

    <Button
        android:id="@+id/tablet_button_enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tablet_description_insert_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/enter"
        app:layout_constraintWidth_percent="0.85"
        />



</androidx.constraintlayout.widget.ConstraintLayout>