<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue">

    <TextView
        android:id="@+id/patient_update_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="NUME"
        android:padding="@dimen/big_padding"
        android:textStyle="bold|italic"
        android:textSize="@dimen/default_email_dimension"
        />

    <TextView
        android:id="@+id/patient_update_age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_update_name_text"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/age"
        android:padding="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        />

    <EditText
        android:id="@+id/patient_update_age_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_update_name_text"
        app:layout_constraintStart_toEndOf="@id/patient_update_age_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/default_email_dimension"
        android:padding="@dimen/small_padding_dimen"
        android:hint="@string/enter_age"
        />

    <TextView
        android:id="@+id/patient_update_height_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_update_age_text"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/small_padding_dimen"
        android:text="@string/height"
        android:textSize="@dimen/default_email_dimension"
        />

    <EditText
        android:id="@+id/patient_update_height_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_update_age_edit"
        app:layout_constraintStart_toEndOf="@id/patient_update_height_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        android:hint="@string/enter_height"
        />

    <TextView
        android:id="@+id/patient_update_weight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_update_height_text"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/small_padding_dimen"
        android:text="@string/weight"
        android:textSize="@dimen/default_email_dimension"
        />

    <EditText
        android:id="@+id/patient_update_weight_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_update_height_edit"
        app:layout_constraintStart_toEndOf="@id/patient_update_weight_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_weight"
        android:padding="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        />


    <Button
        android:id="@+id/patient_update_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_update_weight_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/done"
        android:textSize="@dimen/default_email_dimension"
        android:backgroundTint="@color/transparent_blue"
        />
</androidx.constraintlayout.widget.ConstraintLayout>