<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_green">

    <TextView
        android:id="@+id/registration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_registration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:textSize="@dimen/title_dimen"
        android:textColor="@color/black"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/doctor_email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registration_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        />

    <EditText
        android:id="@+id/doctor_password_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/doctor_email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="50"
        />

    <EditText
        android:id="@+id/doctor_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/doctor_password_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:maxLength="100"
        />

    <Button
        android:id="@+id/doctor_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/doctor_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="@dimen/title_dimen"
        android:text="@string/register_button_text"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>