<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/default_window_padding"
    android:background="@color/light_yellow">

    <TextView
        android:id="@+id/patient_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Name"
        android:textSize="@dimen/name_default_size"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/patient_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_name_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small_padding_dimen"
        tools:text="Email"
        android:textSize="@dimen/default_email_dimension"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/patient_age_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_email_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small_padding_dimen"
        android:text="@string/age"
        android:textSize="@dimen/default_email_dimension"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/patient_age_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_email_text_view"
        app:layout_constraintStart_toEndOf="@id/patient_age_text_view"
        tools:text="20"
        android:layout_marginTop="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        android:maxLines="1"
        android:ellipsize="end"
        android:maxLength="4"
        />

    <TextView
        android:id="@+id/patient_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_age_text_view"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small_padding_dimen"
        android:text="@string/height"
        android:textSize="@dimen/default_email_dimension"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/patient_height_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_age_text_view"
        app:layout_constraintStart_toEndOf="@id/patient_height"
        android:layout_marginTop="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        tools:text="130"
        android:ellipsize="end"
        android:maxLines="1"
        />

    <TextView
        android:id="@+id/patient_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_height"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        android:text="@string/weight"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/patient_weight_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_height"
        app:layout_constraintStart_toEndOf="@id/patient_weight"
        android:layout_marginTop="@dimen/small_padding_dimen"
        android:textSize="@dimen/default_email_dimension"
        tools:text="50"
        android:maxLines="1"
        android:ellipsize="end"
        />

    <TextView
        android:id="@+id/patient_diagnostic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patient_weight"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/medium_padding"
        tools:text="Diagnostic"
        android:textSize="@dimen/default_email_dimension"
        android:maxLines="4"
        android:ellipsize="end"
        />


</androidx.constraintlayout.widget.ConstraintLayout>